Authentication logic to my api
